src/objects/Volunteer_Orientation_Training__c.object
<CustomObject>
    <description>It is a junction object for volunteer and Orientation &amp; Training  object. It will capture the volunteer and his completed  training information details</description>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>This field will be used as a hidden field to store account email and used in email template to merg</description>
        <label>Hidden Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>It will be used as hidden field to store the volunteer account</description>
        <label>Hidden Account Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will used as a hidden field to store the volunteer account phone</description>
        <label>Hiddent Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Class_Offering__c</fullName>
        <description>It will hold the training details.</description>
        <label>Class Offering</label>
        <referenceTo>Class_Offering__c</referenceTo>
        <relationshipLabel>Volunteer Orientation &amp; Trainings</relationshipLabel>
        <relationshipName>Volunteer_Orientation_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>It will display the training completed date.</description>
        <formula>Hidden_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <description>It will display the training cancelled date.</description>
        <formula>if( ISPICKVAL(Volunteer_Attendance__c,&apos;Cancelled&apos;), TODAY() ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It will be used to store the orientation and training date</description>
        <formula>Class_Offering__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>It will be used to store the end time of the orientation and training</description>
        <formula>TEXT(Class_Offering__r.End_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Completed_Date__c</fullName>
        <label>Hidden Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_O_T_Id__c</fullName>
        <description>Its holding Orientation and Training Id</description>
        <label>Hidden O&amp;T Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Enrollment_Id__c</fullName>
        <description>This Field holds the enroll id from the LMS</description>
        <externalId>true</externalId>
        <label>LMS Enrollment Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Class_Offering__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orientation_Training_Hidden__c</fullName>
        <description>It will display the name of the orientation and training</description>
        <formula>Class_Offering__r.Chapter_Role_O_T__r.Orientation_Training__r.Name</formula>
        <label>Orientation &amp; Training</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Completed_Date__c</fullName>
        <description>END_DATE</description>
        <label>RE Completed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Date__c</fullName>
        <description>START_DATE</description>
        <label>RE Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_End_Time__c</fullName>
        <description>END_DATE</description>
        <label>RE End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_ID__c</fullName>
        <description>COURSE</description>
        <label>RE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, Import_ID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Start_Time__c</fullName>
        <description>START_DATE</description>
        <label>RE Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <description>It will capture the volunteer  registered date for the orientation or training session</description>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>It will be used to store the start time of the orientation and training</description>
        <formula>TEXT(Class_Offering__r.Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>It will capture information about whether it is a orientation or training</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VolunteerHidden_Email__c</fullName>
        <description>This filed will be used as a hidden field to store the volunteer email</description>
        <label>VolunteerHidden Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Volunteer_Attendance__c</fullName>
        <description>It will capture whether the volunteer registered or completed the session</description>
        <label>Volunteer Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <description>It will look up to Volunteer Contact records</description>
        <label>Volunteer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Orientation &amp; Trainings</relationshipLabel>
        <relationshipName>Volunteer_Orientation_Trainings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer Orientation &amp; Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Registered_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Volunteer_Attendance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VOT-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Orientation &amp; Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_no_available_seats</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISNEW() &amp;&amp; (00N3600000MqwNY.00N3600000MqwOw &lt;= 0)  &amp;&amp; ISPICKVAL(Volunteer_Attendance__c ,&apos;Registered&apos;),( 00N3600000MqwNY.00N3600000MqwOw &lt;= 0)&amp;&amp; ISPICKVAL(Volunteer_Attendance__c ,&apos;Registered&apos;) )</errorConditionFormula>
        <errorMessage>There is no available seats for this training</errorMessage>
    </validationRules>
</CustomObject>